# jobby_bot

./: .env.example  .gitignore  CLAUDE.md  DISCORD_SETUP.md  README.md  WINDOWS_HOSTING.md  claude_plan.md  logs.txt  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_agno_flow.py  web_research_job_applications.md
docs/: EMAIL_SETUP.md  FEATURES.md  README.md  SESSION_SUMMARY.md  core_idea.md
jobby_bot/: agent.py  auto_job_monitor.py  database.py  discord_bot.py  discord_commands.py  web_agent.py
jobby_bot/prompts/: config_agent.txt  cover_letter.txt  email_agent.txt  job_finder.txt  lead_agent.txt  notion_agent.txt  resume_writer.txt  web_agent.txt
jobby_bot/tools/: __init__.py  jobspy_tool.py  notion_tool.py  pdf_tool.py
jobby_bot/utils/: chrome_pdf_generator.py  docx_generator.py  email_sender.py  html_content_generator.py  pdf_generator.py
jobby_ui/: package-lock.json  package.json  tailwind.config.ts
jobby_ui/app/: globals.css  layout.tsx  page.tsx
jobby_ui/components/: ChatPanel.tsx  Dashboard.tsx  JobCard.tsx  JobDetail.tsx  JobList.tsx  ProfilePanel.tsx  RunPipelineModal.tsx  Sidebar.tsx  StatusBadge.tsx
jobby_ui/hooks/: useJobs.ts
scripts/: README.md  check_health.ps1  cleanup_logs.ps1  install_service.ps1  pdf_to_json_resume.py  start_auto_monitor.bat  start_discord_bot.bat
tests/: test_pdf_spacing.py  test_resume_generation.py
ui_api/: __init__.py  database.py  main.py  models.py  requirements.txt  seed_mock_data.py
ui_api/routes/: chat.py  jobs.py  pipeline.py
